# chronica

./: .gitignore  notebook.md  skill.md
cpp/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile
cpp/include/: api.h  character.h  databaseManager.hpp  lua_loader.hpp
cpp/include/lua/: lua
cpp/include/sqlite/sqlite-src-3300100/: Makefile  config.h  config.status  lemon  libtclsqlite3.la  libtool  mkkeywordhash  mksourceid  sqlite3  sqlite3.pc
cpp/include/sqlite/sqlite-src-3300100/.libs/: libsqlite3.0.dylib  libsqlite3.lai  libtclsqlite3.dylib  libtclsqlite3.lai
cpp/include/sqlite/sqlite-src-3300100/.libs/libtclsqlite3.dylib.dSYM/Contents/Resources/DWARF/: libtclsqlite3.dylib
cpp/include/sqlite/sqlite-src-3300100/lemon.dSYM/Contents/Resources/DWARF/: lemon
cpp/include/sqlite/sqlite-src-3300100/mkkeywordhash.dSYM/Contents/Resources/DWARF/: mkkeywordhash
cpp/include/sqlite/sqlite-src-3300100/mksourceid.dSYM/Contents/Resources/DWARF/: mksourceid
cpp/lib/: libsqlite3.la  lua5.3.0-static.lib  sqlite3.exp  sqlite3.lib
cpp/src/: character.cc  main.cc
cpp/src/lua/: hello.lua
data/: fe_00001.json  test_charaindex.json
py/: random_family.py
